@@ -1,3 +1,8 @@
+2007-04-05  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf32-spu.c (spu_elf_output_symbol_hook): New function.
+	(elf_backend_link_output_symbol_hook): Define.
+
 2007-04-02  Nick Clifton  <nickc@redhat.com>
 
 	PR binutils/4292
